<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="20dp"
        android:orientation="vertical">

    <TextView android:layout_width="match_parent" android:layout_height="0dp"
              android:id="@+id/random_quote"
              android:fontFamily="@font/rubik_bolditalic"
              android:textSize="28sp"
              android:gravity="center"
              android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:hint="@string/email"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:cornerRadius="16dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                app:backgroundTint="@color/colorAccentGreen"
                android:textColor="@color/colorAccentWhite"
                app:iconTint="@color/colorPrimary"
                android:id="@+id/register_button"
        />

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                app:cornerRadius="16dp"
                app:backgroundTint="@color/colorAccentGreen"
                android:textColor="@color/colorAccentWhite"
                app:iconTint="@color/colorPrimary"
                android:id="@+id/login_button"
        />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_as_guest"
            android:minWidth="200dp"
            app:cornerRadius="16dp"
            app:backgroundTint="@color/colorAccentBlue"
            android:textColor="@color/colorAccentWhite"
            app:iconTint="@color/colorPrimary"
            android:id="@+id/guest_button"
            android:layout_marginBottom="150dp"
    />
</LinearLayout>