<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:layout_height="wrap_content"
                                       android:layout_width="match_parent"
                                       android:background="@drawable/background"
                                       android:fillViewport="true">
    <LinearLayout
            android:id="@+id/container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_layout"
                    style="@style/TextViewLayout"
                    android:layout_width="0dp"
                    android:hint="@string/name"
                    android:layout_height="match_parent"
                    android:focusedByDefault="true"
                    android:clickable="false"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="2"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/name"
                        android:minHeight="40dp"
                        android:textColor="@color/colorAccentOrange"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/height_text_layout"
                    style="@style/TextViewLayout"
                    android:layout_width="0dp"
                    android:hint="@string/height"
                    android:layout_height="match_parent"
                    android:focusedByDefault="true"
                    android:clickable="false"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_weight="1"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height_text"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/neutral"
                        android:minHeight="40dp"
                        android:textColor="@color/colorAccentOrange"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weight_text_layout"
                    style="@style/TextViewLayout"
                    android:layout_width="0dp"
                    android:hint="@string/weight"
                    android:layout_height="match_parent"
                    android:focusedByDefault="true"
                    android:clickable="false"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_weight="1"
                    app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight_text"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/neutral"
                        android:minHeight="40dp"
                        android:textColor="@color/colorAccentOrange"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/age_text_layout"
                    style="@style/TextViewLayout"
                    android:layout_width="0dp"
                    android:hint="@string/age"
                    android:layout_height="match_parent"
                    android:focusedByDefault="true"
                    android:clickable="false"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_text"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/age"
                        android:minHeight="40dp"
                        android:textColor="@color/colorAccentOrange"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bmi_text_layout"
                    style="@style/TextViewLayout"
                    android:layout_width="0dp"
                    android:hint="@string/bmi"
                    android:layout_height="match_parent"
                    android:focusedByDefault="true"
                    android:clickable="false"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bmi_text"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/bmi"
                        android:minHeight="40dp"
                        android:textColor="@color/colorAccentOrange"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginBottom="20dp">
            <TextView android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="2"/>
            <ru.dimorinny.floatingtextbutton.FloatingTextButton
                    android:id="@+id/edit_account_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:minHeight="40dp"
                    android:layout_marginStart="40dp"
                    app:floating_background_color="@color/colorPrimaryDark"
                    app:floating_left_icon="@drawable/ic_edit_orange_24dp"
                    app:floating_title="Edit Info"
                    app:floating_title_color="@color/colorAccentOrange"/>
        </LinearLayout>
        <Space
                android:layout_height="1dp"
                android:layout_width="match_parent"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPassword_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/colorAccentOrange"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPassword_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPassword_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/colorAccentOrange"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:minHeight="50dp"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmNewPassword_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/colorAccentOrange"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmNewPassword_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:minHeight="50dp"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:minWidth="200dp"
                app:cornerRadius="16dp"
                app:backgroundTint="@color/colorAccentOrange"
                android:textColor="@color/colorAccentWhite"
                app:iconTint="@color/colorPrimary"
                android:id="@+id/change_password_button"/>
        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"
                android:minWidth="200dp"
                app:cornerRadius="16dp"
                app:backgroundTint="@color/colorWarning"
                android:textColor="@color/colorAccentWhite"
                app:iconTint="@color/colorPrimary"
                android:id="@+id/delete_account_button"/>
        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:minWidth="200dp"
                app:cornerRadius="16dp"
                app:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorAccentWhite"
                app:iconTint="@color/colorPrimary"
                android:id="@+id/logout_button"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>