<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="20dp"
        android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center" android:baselineAligned="false"
                  android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="textVisiblePassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center" android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/length_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/length_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="number"
                    android:minHeight="50dp"
                    android:maxLength="3"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/weight"
                android:layout_marginStart="10dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/colorAccentOrange"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weight_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLength="5"
                    android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center">
        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/gender_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                app:borderWidth="1dp"
                app:borderRadius="16dp"
                app:checkedBackgroundColor="@color/colorAccentOrange"
                app:uncheckedBackgroundColor="@color/colorTransparent"
                app:checkedBorderColor="@color/colorHintText"
                app:uncheckedBorderColor="@color/colorHintText"
                app:checkedTextColor="@color/colorAccentWhite"
                app:uncheckedTextColor="@color/colorHintText"
                app:separatorColor="@color/colorTransparent"
                app:separatorVisible="false"
                app:toggleHeight="50dp"
                android:layout_weight="1"
                android:minHeight="50dp"
                android:layout_marginEnd="10dp"
                app:textToggleLeft="Man"
                app:textToggleRight="Woman"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/age"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                android:layout_weight="1"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:minHeight="50dp"
                    android:maxLength="2"
                    android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:minWidth="200dp"
            app:cornerRadius="16dp"
            app:backgroundTint="@color/colorAccentOrange"
            android:textColor="@color/colorAccentWhite"
            app:iconTint="@color/colorPrimary"
            android:id="@+id/save_account_info_button"/>
    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:minWidth="200dp"
            app:cornerRadius="16dp"
            app:backgroundTint="@color/colorAccentBlue"
            android:textColor="@color/colorAccentWhite"
            app:iconTint="@color/colorPrimary"
            android:id="@+id/back_button"/>
</LinearLayout>